log
Wed 20 Mar 2024 06:16:27 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:28: error: expected statement before ‘)’ token
   47 |   for (i = 1; i <= 10; i++)) {
      |                            ^
exercises.c:47:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   47 |   for (i = 1; i <= 10; i++)) {
      |   ^~~
exercises.c:47:30: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   47 |   for (i = 1; i <= 10; i++)) {
      |                              ^
exercises.c:48:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |     push_back(L, &i);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
70477e1
Wed 20 Mar 2024 06:16:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |     push_back(L, &i);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
1af8259
Wed 20 Mar 2024 06:17:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
90d5372
Wed 20 Mar 2024 06:18:54 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
e0d0091
Wed 20 Mar 2024 06:20:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2dab13a
Wed 20 Mar 2024 06:28:41 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
2dc11ad
Wed 20 Mar 2024 06:30:05 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:10: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   47 |   for (i = 1; i <= 10; i++) {
      |          ^
exercises.c:47:17: error: comparison between pointer and integer [-Werror]
   47 |   for (i = 1; i <= 10; i++) {
      |                 ^~
cc1: all warnings being treated as errors
Compilation failed
5cfb2a9
Wed 20 Mar 2024 06:30:19 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 30/70
c17f4f4
